--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,12 +11,43 @@
 }
 
 body {
-  background-color: #f8d5d6;
-  background-size: cover;
-  font-family: source-sans-pro;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(204, 195, 255, 0.61),
+      rgba(155, 255, 222, 0.938)
+    ),
+    url("./components/layout/images/background-hero.jpg") !important;
+  background-size: contain;
+  font-family: "Open Sans" !important;
+}
+
+/*panel*/
+
+.instruction-panel {
+  display: flex;
+  justify-content: space-between;
 }
 
 /*  Signup  */
+
+/* Nav */
+
+nav {
+  background-color: rgba(0, 0, 56, 0.726) !important;
+  position: fixed;
+  z-index: 99;
+}
+
+.navlinks {
+  display: inline-block;
+  font-size: 18px;
+  transform: scale(0.75, 1);
+}
+
+nav ul li:hover {
+  background-color: rgba(255, 255, 255, 0.644);
+  color: rgb(1, 1, 73) !important;
+}
 
 /* Form field styling */
 
@@ -31,117 +62,8 @@ input {
   letter-spacing: 0.01em;
   font-style: normal;
   font-weight: 300;
-  font-family: source-sans-pro !important;
 }
 
-#fname {
-  width: 100%;
-}
-
-#lname {
-  width: 100%;
-}
-
-#email {
-  width: 100%;
-}
-
-#address {
-  width: 100%;
-}
-
-input[type="checkbox"] {
-  visibility: hidden;
-}
-
-#checkbox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0;
-  padding: 0;
-  width: 20px;
-  height: 20px;
-}
-
-.customCheck {
-  width: 90%;
-  float: left;
-  margin-top: 20px;
-  position: relative;
-}
-
-.customCheck label {
-  cursor: pointer;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  top: 0;
-  left: 0;
-  background: #eee;
-  border: 1px solid #ddd;
-}
-
-.customCheck label:after {
-  opacity: 0.2;
-  content: "";
-  position: absolute;
-  width: 9px;
-  height: 5px;
-  background: transparent;
-  top: 5px;
-  left: 4px;
-  border: 3px solid #333;
-  border-top: none;
-  border-right: none;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.customCheck label:hover::after {
-  opacity: 0.5;
-}
-
-.customCheck input[type="checkbox"]:checked + label:after {
-  opacity: 1;
-}
-
-.robot {
-  display: inline-block;
-  position: relative;
-  width: 60%;
-  margin: 0 0 0 30px;
-  line-height: 1em;
-}
-
-#submit {
-  display: block;
-  border: 0;
-  width: 25%;
-  height: 60px;
-  margin: 30px auto 0;
-  background: #d84444;
-  color: rgb(255, 227, 227);
-  text-align: center;
-  transition: background-color, color, 0.5s ease 0;
-  border: 0;
-  font-size: 1.2em;
-  line-height: 1.5em;
-  color: #333333;
-  letter-spacing: 0.01em;
-  font-style: normal;
-  font-weight: 300;
-  /* font-family: source-sans-pro !important; */
-}
-
-#submit:hover {
-  background: #631b1b;
-  border: 1px #dadada;
-  color: #cca9a9;
-}
 /* Top-level Styling */
 
 ::-webkit-input-placeholder {
@@ -167,7 +89,7 @@ input[type="checkbox"] {
 
 * {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
   -webkit-padding-start: 0;
@@ -185,26 +107,9 @@ input[type="checkbox"] {
 }
 /* Parallax End */
 
-/* body {
-  height: 100vh; */
-/* background-size: cover; */
-/* margin: 0 auto;
-} */
-
-/* body:before {
-  content: "";
-  background-image: url(./signup-bg.jpg);
-  background-size: cover;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  opacity: 0.2;
-} */
 #wrapper {
   max-width: 60%;
-  height: 100%;
+  height: 500px;
   background: #fff;
   margin: 0px auto 0;
   padding: 20px;
@@ -215,8 +120,8 @@ input[type="checkbox"] {
   max-width: 60%;
   height: 100%;
   background: #fff;
-  margin: 30px auto 0;
-  padding: 20px;
+  margin: 0 auto 0;
+  padding-top: 120px;
 }
 
 #subscribeBox {
@@ -277,6 +182,7 @@ p {
   padding: 45px auto;
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   /* float: left; */
 }
 
@@ -318,8 +224,13 @@ p {
 
 .slider,
 .card {
-  width: 85%;
+  width: 40%;
   border-radius: 5px;
+  top: 30px;
+}
+
+.collapsible {
+  width: 40%;
 }
 
 .preloader-new {
@@ -343,41 +254,33 @@ p {
 }
 
 section.primary {
-  flex-basis: 60%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  border-right: 10px solid white;
-  border-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='50' height='50'><defs><linearGradient id='redgradient'><stop offset='0' stop-color='%23FFC14D'/><stop offset='0.362' stop-color='%23FF4834'/><stop offset='1' stop-color='%233B0300'/></linearGradient></defs><g id='Layer_1'><path d='M0,0 L50,0 L50,50 L0,50 L0,0 z' fill='url(%23redgradient)' width='100%' height='100%'/></g></svg>")
-    10% stretch;
 }
 /* border-right: 4px solid rgb(180, 16, 49); */
 
 section.secondary {
+  padding-top: 100px;
   flex-basis: 40%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  background-color: rgb(41, 40, 40);
+  justify-content: space-around;
+  clip-path: polygon(0 0, 100% 22%, 100% 100%, 0 100%);
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(10, 0, 65, 0.61),
+      rgba(47, 0, 68, 0.938)
+    ),
+    url("./components/layout/images/texture.jpg");
+  background-size: 100%;
+  align-items: flex-end;
 }
 section {
   margin: 0;
   padding-top: 55px;
-}
-#cool-card {
-  background-color: rgb(119, 119, 119);
-  border: 4px solid #ad020a;
-}
-
-.stripes {
-  color: white !important;
-  background: repeating-linear-gradient(
-    45deg,
-    #ad020a,
-    #ad020a 10px,
-    #ad020b93 10px,
-    #ad020b41 20px
-  ) !important;
+  padding-bottom: 50px;
 }
 
 .collection {
@@ -385,8 +288,8 @@ section {
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   overflow: hidden;
-  padding: 45px auto !important;
-  width: 85%;
+  padding: 45px auto 150px !important;
+  width: 80%;
 }
 
 /* .collection-item.highlight:first-child {
@@ -444,7 +347,7 @@ section {
   text-decoration: line-through;
 }
 
-span.red {
+span.indigo {
   border-radius: 25px;
 }
 
@@ -454,7 +357,7 @@ span.red {
 }
 
 .highlight:hover {
-  background-color: rgb(252, 193, 193);
+  background-color: rgb(194, 193, 252);
 }
 .tt-helper {
   right: -348px;
@@ -478,8 +381,9 @@ span.red {
 }
 
 #zaxximo-logo {
-  font-family: "Antonio", sans serif;
   margin-left: 3%;
+  letter-spacing: 1.5rem;
+
   font-size: 3rem;
 }
 
@@ -497,7 +401,6 @@ span.red {
   outline: none;
   color: #fff;
   background: transparent;
-  font-family: "raleway", sans-serif;
 }
 
 .button-title span {
@@ -639,4 +542,92 @@ We hide :before pseudo-element on :active
   to {
     transform: rotate(360deg);
   }
+}
+
+.full-screen-container {
+  background-image: url("https://images.unsplash.com/photo-1573496782646-e8d943a4bdd1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1650&q=80");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-container {
+  background-color: rgba(0, 0, 56, 0.726);
+  padding: 20px 30px;
+  min-width: 400px;
+  width: 50%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+}
+
+.login-title {
+  color: #fff;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 30px;
+  font-size: 3em;
+  font-weight: normal;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.name-input-group {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+  justify-content: space-between;
+}
+
+.input-group label,
+.name-input-group label {
+  color: #fff;
+  font-weight: lighter;
+  font-size: 1em;
+  margin-bottom: 7px;
+}
+
+.input-group input,
+.name-input-group input {
+  font-size: 1em;
+  padding: 0.1em 0.25em;
+  background-color: hsla(201, 100%, 91%, 0.3);
+  border: 1px solid hsl(201, 100%, 6%);
+  outline: none;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: lighter;
+}
+
+.input-group input:focus {
+  border: 1px solid hsl(201, 100%, 50%);
+}
+
+.login-button {
+  align-self: center;
+  width: 50%;
+  border-radius: 5px;
+  background: hsla(201, 100%, 50%, 0.1);
+  border: 1px solid hsl(201, 100%, 50%);
+  outline: none;
+  font-size: 1.5em;
+  color: #fff;
+  font-weight: lighter;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.login-button:hover {
+  background-color: hsla(201, 100%, 50%, 0.3);
+}
+
+.login-button:focus {
+  background-color: hsla(201, 100%, 50%, 0.5);
 }
