--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,9 +16,9 @@ body {
       rgba(204, 195, 255, 0.61),
       rgba(155, 255, 222, 0.938)
     ),
-    url("./components/layout/images/background-hero.jpg") !important;
+    url('./components/layout/images/background-hero.jpg') !important;
   background-size: contain;
-  font-family: "Open Sans" !important;
+  font-family: 'Open Sans' !important;
 }
 
 /*panel*/
@@ -102,8 +102,16 @@ input {
 }
 
 .section-about {
-  padding-top: 3rem;
-  padding-bottom: 7rem;
+  padding-top: 5rem;
+  padding-bottom: 9rem;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(170, 155, 255, 0.897),
+      rgba(255, 245, 252, 0.959)
+    ),
+    url('./components/layout/images/bg-parallax.jpg');
+  background-size: cover;
+  width: 100%;
 }
 /* Parallax End */
 
@@ -165,7 +173,7 @@ a {
 p {
   display: block;
   width: 90%;
-  margin: 20px 0 0 0;
+  margin: 20px auto;
   font-size: 1.2em;
   line-height: 1.5em;
   color: #333333;
@@ -191,46 +199,19 @@ p {
   float: left;
 } */
 
-.slider .indicators .indicator-item {
-  display: none !important;
-  position: relative;
-  cursor: pointer;
-  height: 16px;
-  width: 16px;
-  margin: 0 12px;
-  background-color: #e0e0e0;
-  -webkit-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-  border-radius: 50%;
-}
-
-.carousel .indicators .indicator-item {
-  display: none !important;
-  position: relative;
-  cursor: pointer;
-  height: 8px;
-  width: 8px;
-  margin: 24px 4px;
-  background-color: rgba(255, 255, 255, 0.5);
-  -webkit-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-  border-radius: 50%;
-}
-.slides {
-  border: 4px solid #ad020a;
-  z-index: 0;
-  border-radius: 5px;
-}
-
-.slider,
-.card {
-  width: 40%;
-  border-radius: 5px;
-  top: 30px;
+.carousel {
+  width: 60%;
 }
 
 .collapsible {
   width: 40%;
+}
+
+.collapsible-body {
+  background-color: rgba(255, 255, 255, 0.432);
+  border-bottom: 1px solid #ddd;
+  box-sizing: border-box;
+  padding: 2rem;
 }
 
 .preloader-new {
@@ -273,7 +254,7 @@ section.secondary {
       rgba(10, 0, 65, 0.61),
       rgba(47, 0, 68, 0.938)
     ),
-    url("./components/layout/images/texture.jpg");
+    url('./components/layout/images/texture.jpg');
   background-size: 100%;
   align-items: flex-end;
 }
@@ -416,7 +397,7 @@ span.indigo {
 
 .button-title:before,
 .button-title:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0.67em;
   left: 0;
@@ -545,7 +526,28 @@ We hide :before pseudo-element on :active
 }
 
 .full-screen-container {
-  background-image: url("https://images.unsplash.com/photo-1573496782646-e8d943a4bdd1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1650&q=80");
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(7, 0, 48, 0.904),
+      rgba(255, 255, 255, 0.877)
+    ),
+    url('https://images.unsplash.com/photo-1573496782646-e8d943a4bdd1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1650&q=80');
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.full-screen-container-sign-up {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(242, 240, 255, 0.5),
+      rgba(255, 255, 255, 0.452)
+    ),
+    url('./components/layout/images/texture.jpg');
   height: 100vh;
   width: 100vw;
   background-size: cover;
